--- a/src/main.css
+++ b/src/main.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: rgb(22, 23, 34);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,7 +14,25 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: Poppins, sans-serif;
+  outline: none;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  color: rgb(204, 204, 204);
+}
+
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -27,7 +45,6 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -54,16 +71,18 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
