--- a/src/main.css
+++ b/src/main.css
@@ -9,8 +9,15 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: rgb(22, 23, 34);
+  color: var(--color-white);
+
+  --color-accent: rgb(127, 90, 240);
+  --color-white: rgb(204, 204, 204);
+  --color-gray: rgb(102, 102, 102);
+
+  --color-bg-dark: rgb(13, 13, 20);
+  --color-bg-dark2: rgb(22, 23, 34);
+  --color-bg-dark3: rgb(37, 39, 60);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,6 +33,8 @@
   outline: none;
 }
 
+body { background-color: var(--color-bg-dark2) }
+
 main {
   display: flex;
   flex-direction: column;
@@ -33,8 +42,6 @@ main {
   align-items: center;
   -webkit-box-pack: center;
   justify-content: center;
-
-  color: rgb(204, 204, 204);
 }
 
 
