--- a/src/main.css
+++ b/src/main.css
@@ -11,13 +11,13 @@
   color-scheme: light dark;
   color: var(--color-white);
 
-  --color-accent: rgb(127, 90, 240);
-  --color-white: rgb(204, 204, 204);
-  --color-gray: rgb(102, 102, 102);
+    --color-accent: rgb(217 63 102);
+    --color-white: rgb(204, 204, 204);
+    --color-gray: rgb(90 79 63);
 
-  --color-bg-dark: rgb(13, 13, 20);
-  --color-bg-dark2: rgb(22, 23, 34);
-  --color-bg-dark3: rgb(37, 39, 60);
+    --color-bg-dark: rgb(22 19 19);
+    --color-bg-dark2: rgb(39 32 32);
+    --color-bg-dark3: rgb(61 52 48);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
