--- a/src/main.css
+++ b/src/main.css
@@ -13,11 +13,11 @@
 
   --color-accent: rgb(217 63 102);
   --color-white: rgb(204, 204, 204);
-  --color-gray: rgb(90 79 63);
+  --color-gray: rgb(74, 66, 54);
 
-  --color-bg-dark: rgb(21 19 19);
-  --color-bg-dark2: rgb(39 32 32);
-  --color-bg-dark3: rgb(61 52 48);
+  --color-bg-dark: rgb(34, 27, 27);
+  --color-bg-dark2: rgb(39, 33, 33);
+  --color-bg-dark3: rgb(51, 44, 41);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
