--- a/src/main.css
+++ b/src/main.css
@@ -13,11 +13,11 @@
 
   --color-accent: rgb(217 63 102);
   --color-white: rgb(204, 204, 204);
-  --color-gray: rgb(74, 66, 54);
+  --color-gray: rgb(80, 71, 58);
 
-  --color-bg-dark: rgb(34, 27, 27);
-  --color-bg-dark2: rgb(39, 33, 33);
-  --color-bg-dark3: rgb(51, 44, 41);
+  --color-bg-dark: rgb(29, 27, 27);
+  --color-bg-dark2: rgb(38 33 33);
+  --color-bg-dark3: rgb(57, 48, 45);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
