teal-pnk default color scheme

--- a/src/main.css
+++ b/src/main.css
@@ -14,7 +14,7 @@
   -webkit-text-size-adjust: 100%;
 
   color: var(--color-white);
-  background-color: var(--color-bw-dark2);
+  background-color: var(--color-tl-dark2);
   
   color-scheme: light dark;
 
